[package]
name = "rcc"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# color output
ansi_term = "0.6"

# cryptoxide
# cryptoxide = "0.1"
cryptoxide = "0.3"

# rustcrypto
blake2 = "0.9"
sha2 = "0.9"
digest = "0.9"
poly1305 = "0.6"
universal-hash = "0.4"
chacha20 = "0.8"

# dalek stuff
curve25519-dalek = "3"
x25519-dalek = "1.2"

# ring
ring = "0.16"

[features]
opt = [ "blake2/simd", "sha2/asm" ]
