[package]
name = "rcc"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# color output
ansi_term = "0.6"
clap = { version = "4", features = ["derive"] }

# cryptoxide
# cryptoxide = "0.4"
cryptoxide = { path = "../cryptoxide", version = "^0.4.3" }

# rustcrypto
blake2 = "0.10"
sha1 = "0.6"
sha2 = "0.10"
sha3 = "0.10"
digest = "0.10"
poly1305 = "0.8"
universal-hash = "0.5"
chacha20 = "0.9"
chacha20poly1305 = "0.10"

rust-argon2 = "1.0"

# dalek stuff
curve25519-dalek = { version = "3" }
ed25519-dalek = { version = "1" }
x25519-dalek = { version = "2.0.0-pre.1" }

#curve25519-dalek = { version = "3", default-features = false }
#ed25519-dalek = { version = "1", default-features = false }
#x25519-dalek = { version = "1.2", default-features = false }

# ring
ring = "0.16"

[features]
default = []
opt = [ "blake2/simd", "sha2/asm" ]
force32bits = ["cryptoxide/force-32bits"]

#force32bits = ["cryptoxide/force-32bits", "curve25519-dalek/u32_backend", "x25519-dalek/u32_backend", "ed25519-dalek/u32_backend"]
